updated javascript content again

--- a/notebooks/03_Coding/JavaScript/JavaScript Basics.ipynb
+++ b/notebooks/03_Coding/JavaScript/JavaScript Basics.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "d942d7c8-51b1-4c0a-98c0-f4c41723c9a2",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "568434fe-9e50-48a3-a857-066cdcd8185f",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "53d4c108-7a5a-4418-9142-e9676f3ebf0f",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "b78a49d3-c1f4-4381-97c0-4c80644e7d34",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "9cc8ea74-21c9-4e9a-a3d6-23fe6eb4e712",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "7adc0fa1-c9db-4d83-a7c3-2198768a479b",
    "metadata": {},
    "outputs": [],
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "37d0b678-7b9c-484e-8cc1-c31d1f035911",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "43384173-7692-45f5-ade1-aa4972045219",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "edfd7c5a-706e-44b0-bde5-4310da77b16e",
    "metadata": {},
    "outputs": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "id": "902dc605-cc9d-44e1-aaef-579abfc6445f",
    "metadata": {},
    "outputs": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "id": "59c6eb9b-b486-45d1-9749-6dc30433a5b9",
    "metadata": {},
    "outputs": [
@@ -374,7 +374,7 @@
        "4"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "id": "f33a2654-04fb-4f5a-856c-14a79db4e88f",
    "metadata": {},
    "outputs": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "id": "52b307ce-0e0e-4690-b9ba-709f87c3e87d",
    "metadata": {},
    "outputs": [],
@@ -457,6 +457,132 @@
    "metadata": {},
    "source": [
     "Creating an Instance of a Class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "99fdcf1e-57b5-481f-9072-0804a25a3af0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, my name is John and I am 25 years old.\n"
+     ]
+    }
+   ],
+   "source": [
+    "const John = new Person(\"John\", 25);\n",
+    "console.log(John.greet());\n",
+    "// Output: Hello, my name is John and I am 25 years old."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "493427ba-ff67-4301-875a-1e34c45aeed2",
+   "metadata": {},
+   "source": [
+    "Adding Methods to Modify Properties"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "513095a1-5fa3-4a7e-b517-b56560d6b2ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person2 {\n",
+    "  constructor(name, age) {\n",
+    "    this.name = name;\n",
+    "    this.age = age;\n",
+    "  }\n",
+    "\n",
+    "  celebrateBirthday() {\n",
+    "    this.age++;\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "const john = new Person2(\"John\", 30);\n",
+    "john.celebrateBirthday();\n",
+    "console.log(john.age);  // 31"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2822dd5c-188f-4647-a333-b34c0911f89f",
+   "metadata": {},
+   "source": [
+    "## 8. Objects and Arrays\n",
+    "\n",
+    "Objects\n",
+    "\n",
+    "Containers of key-value pairs, where keys are strings (or symbols) and values can be any type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4df74b4e-c75d-45da-b648-a4714465fa8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, I am John\n"
+     ]
+    }
+   ],
+   "source": [
+    "let person = {\n",
+    "  name: \"John\",\n",
+    "  age: 25,\n",
+    "  greet: function() {\n",
+    "    return `Hi, I am ${this.name}`;\n",
+    "  }\n",
+    "};\n",
+    "\n",
+    "console.log(person.greet());  // Hi, I am John"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "010b1c5d-c2d1-4783-8c20-25c16c10b5c3",
+   "metadata": {},
+   "source": [
+    "**Arrays**\n",
+    "\n",
+    "Ordered lists of values, zero-indexed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "9709156f-a61d-49e8-86f9-b0105491ccd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "let numbers = [10, 20, 30];\n",
+    "console.log(numbers[1]);  // 20"
    ]
   }
  ],
