added sql notes

--- a/notebooks/02_Data_Analysis/MySQL/2. GROUP BY, ORDER BY.ipynb
+++ b/notebooks/02_Data_Analysis/MySQL/2. GROUP BY, ORDER BY.ipynb
@@ -35,18 +35,45 @@
     "\n",
     "**Note:** We can still use aggregate functions without the GROUP BY clause. Note for the following we would not be able to display other columns with it. E.g != AVG(age), gender <- wont work \n",
     "\n",
-    "<img src=\"static/GROUP_BY_03.png\" style=\"width: 70%; margin: auto;\">\n",
+    "<img src=\"static/GROUP_BY_03.png\" style=\"width: 70%; margin: auto;\"> \n",
     "\n",
-    "\n"
+    "<hr>\n",
+    "\n",
+    "### Common aggregate functions: \n",
+    "\n",
+    "| Function     | Description                           |\n",
+    "|--------------|---------------------------------------|\n",
+    "| COUNT()      | Counts rows in each group             |\n",
+    "| SUM()        | Adds up values in each group          |\n",
+    "| AVG()        | Calculates average                    |\n",
+    "| MIN() / MAX()| Finds smallest / largest value        |\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "# ORDER BY\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "#### Sorts the result in ascending or descending order\n",
+    "\n",
+    "By Default order by sorts in ASC order (not DESC)\n",
+    "<hr>\n",
+    "\n",
+    "For the following we are:\n",
+    "- Selecting everything\n",
+    "- from employee_demographics\n",
+    "- and we are ordering by gender.\n",
+    "\n",
+    "<img src=\"static/ORDER_BY_01.png\" style=\"width: 70%; margin: auto;\"> \n",
+    "\n",
+    "####\n",
+    "\n",
+    "**Note:** We can also order by on multiple columns. Lets say we were to order by on gender and then age. \n",
+    "\n",
+    "<img src=\"static/ORDER_BY_02.png\" style=\"width: 70%; margin: auto;\"> \n",
+    "\n",
+    "**Note:** When ordering by on multiple columns, the order is what gives preference. so if we have gender, age - gender will be ordered by first and then age. The order in which you place columns for order by is important. If we were to order by age first and then gender, ordering by gender second would be redundant as preference for age would be determined. \n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6455c71-0ca4-4a03-b43e-ad24c00a23cd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
