added sql notes

--- a/notebooks/02_Data_Analysis/MySQL/Begginer SQL/3. HAVING.ipynb
+++ b/notebooks/02_Data_Analysis/MySQL/Begginer SQL/3. HAVING.ipynb
@@ -5,7 +5,7 @@
    "id": "d831922a-2a1b-4c2d-b8e5-08ac1e359f65",
    "metadata": {},
    "source": [
-    "# Having\n",
+    "# HAVING\n",
     "\n",
     "<hr>\n",
     "\n",
@@ -22,16 +22,25 @@
     "```SELECT column_name, aggregate_function(column_name)```\\\n",
     "```FROM table_name```\\\n",
     "```GROUP BY column_name```\\\n",
-    "```HAVING condition;```"
+    "```HAVING condition;```\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "We previously looked at how we can use group by to group certain values together. Now if we want to display our aggregated data based off a condition we can use the HAVING clause. \n",
+    "\n",
+    "In the following we:\n",
+    "- select gender and avgerage age\n",
+    "- from employee_demographics\n",
+    "- which is grouped based off the gender ('male' and 'female' are only two unique values)\n",
+    "- which have an AVG(age) above 40\n",
+    "\n",
+    "**Note:** The ***which have an AVG(age) above 40*** refers to the rolled up group of values' average age\n",
+    "\n",
+    "<img src=\"static/HAVING_01.png\" style=\"width: 70%; margin: auto;\">\n",
+    "\n",
+    "The above only shows male because the average age of the female gender was below 40. \n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8dcb31a-d45b-4cb9-a1fb-5deaf84544a0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
