added image styling to mysql notebooks

--- a/notebooks/02_Data_Analysis/MySQL/Begginer SQL/2. GROUP BY, ORDER BY.ipynb
+++ b/notebooks/02_Data_Analysis/MySQL/Begginer SQL/2. GROUP BY, ORDER BY.ipynb
@@ -5,6 +5,12 @@
    "id": "b5421eb7-a326-4b39-b32a-e10909aa6dcf",
    "metadata": {},
    "source": [
+    "<style>\n",
+    "@media (max-width: 600px) {\n",
+    "    img[style] { width: 90% !important; }\n",
+    "}\n",
+    "</style>\n",
+    "\n",
     "# GROUP BY\n",
     "\n",
     "<hr>\n",
@@ -20,7 +26,7 @@
     "\n",
     "Note: Notice that we only get an output of Male and Female. This is because 'male' and 'female' are the only unique values in the gender column. We are rolling up all the values into these unique groups. \n",
     "\n",
-    "<img src=\"static/GROUP_BY_01.png\" style=\"width: 70%; margin: auto;\">\n",
+    "<img src=\"static/GROUP_BY_01.png\" style=\"width: 40%; margin: auto;\">\n",
     "\n",
     "####\n",
     "\n",
@@ -31,11 +37,11 @@
     "- from employee_demographics\n",
     "- and we are grouping by gender. (average age for each rolled up group: male and female)\n",
     "\n",
-    "<img src=\"static/GROUP_BY_02.png\" style=\"width: 70%; margin: auto;\">\n",
+    "<img src=\"static/GROUP_BY_02.png\" style=\"width: 40%; margin: auto;\">\n",
     "\n",
     "**Note:** We can still use aggregate functions without the GROUP BY clause. Note for the following we would not be able to display other columns with it. E.g != AVG(age), gender <- wont work \n",
     "\n",
-    "<img src=\"static/GROUP_BY_03.png\" style=\"width: 70%; margin: auto;\"> \n",
+    "<img src=\"static/GROUP_BY_03.png\" style=\"width: 40%; margin: auto;\"> \n",
     "\n",
     "<hr>\n",
     "\n",
@@ -64,16 +70,24 @@
     "- from employee_demographics\n",
     "- and we are ordering by gender.\n",
     "\n",
-    "<img src=\"static/ORDER_BY_01.png\" style=\"width: 70%; margin: auto;\"> \n",
+    "<img src=\"static/ORDER_BY_01.png\" style=\"width: 40%; margin: auto;\"> \n",
     "\n",
     "####\n",
     "\n",
     "**Note:** We can also order by on multiple columns. Lets say we were to order by on gender and then age. \n",
     "\n",
-    "<img src=\"static/ORDER_BY_02.png\" style=\"width: 70%; margin: auto;\"> \n",
+    "<img src=\"static/ORDER_BY_02.png\" style=\"width: 40%; margin: auto;\"> \n",
     "\n",
     "**Note:** When ordering by on multiple columns, the order is what gives preference. so if we have gender, age - gender will be ordered by first and then age. The order in which you place columns for order by is important. If we were to order by age first and then gender, ordering by gender second would be redundant as preference for age would be determined. \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa08056c-caeb-42df-8900-f381f08dd8d1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
