--- a/notebooks/02_Data_Analysis/MySQL/Begginer SQL/3. HAVING.ipynb
+++ b/notebooks/02_Data_Analysis/MySQL/Begginer SQL/3. HAVING.ipynb
@@ -5,6 +5,12 @@
    "id": "d831922a-2a1b-4c2d-b8e5-08ac1e359f65",
    "metadata": {},
    "source": [
+    "<style>\n",
+    "@media (max-width: 600px) {\n",
+    "    img[style] { width: 90% !important; }\n",
+    "}\n",
+    "</style>\n",
+    "\n",
     "# HAVING\n",
     "\n",
     "<hr>\n",
@@ -36,7 +42,7 @@
     "\n",
     "**Note:** The ***which have an AVG(age) above 40*** refers to the rolled up group of values' average age\n",
     "\n",
-    "<img src=\"static/HAVING_01.png\" style=\"width: 70%; margin: auto;\">\n",
+    "<img src=\"static/HAVING_01.png\" style=\"width: 40%; margin: auto;\">\n",
     "\n",
     "The above only shows male because the average age of the female gender was below 40. \n",
     "\n"
