--- a/notebooks/02_Data_Analysis/MySQL/Intermediate SQL/5. JOINS.ipynb
+++ b/notebooks/02_Data_Analysis/MySQL/Intermediate SQL/5. JOINS.ipynb
@@ -5,6 +5,12 @@
    "id": "2e2979aa-7b93-485d-9728-36ac638c888c",
    "metadata": {},
    "source": [
+    "<style>\n",
+    "@media (max-width: 600px) {\n",
+    "    img[style] { width: 90% !important; }\n",
+    "}\n",
+    "</style>\n",
+    "\n",
     "# JOINS \n",
     "\n",
     "<hr>\n",
@@ -108,7 +114,7 @@
     "**Note:** From the explanation of line 9 above if we had ON sal1.employee_id <strong><span style=\"color: red;\">-</span></strong> 1 = sal2.employee_id instead of '+' then we would need to match values from the right table to the left table where employee_id - 1 = left.employee_id \n",
     "since the first value is 1 in employee_id there is no emoloyee_id with 0 so therefore it is skipped. 2 - 1 = 1 however so employee_id with value 2 will match with employee_id with 1\n",
     "\n",
-    "<img src=\"static/SELF_JOIN_01.png\" style=\"width: 60%; margin: auto;\">\n",
+    "<img src=\"static/SELF_JOIN_01.png\" style=\"width: 40%; margin: auto;\">\n",
     "\n",
     "####\n",
     "\n",
