--- a/notebooks/02_Data_Analysis/MySQL/Begginer SQL/4. LIMIT and ALIASING.ipynb
+++ b/notebooks/02_Data_Analysis/MySQL/Begginer SQL/4. LIMIT and ALIASING.ipynb
@@ -5,6 +5,12 @@
    "id": "5ffbb1c2-bef1-4e2f-91ad-9b536a923826",
    "metadata": {},
    "source": [
+    "<style>\n",
+    "@media (max-width: 600px) {\n",
+    "    img[style] { width: 90% !important; }\n",
+    "}\n",
+    "</style>\n",
+    "\n",
     "# LIMIT \n",
     "\n",
     "<hr>\n",
@@ -19,7 +25,7 @@
     "```LIMIT 3```\\\n",
     "```;```\n",
     "\n",
-    "<img src=\"static/LIMIT_01.png\" style=\"width: 70%; margin: auto;\">\n",
+    "<img src=\"static/LIMIT_01.png\" style=\"width: 40%; margin: auto;\">\n",
     "\n",
     "<hr>\n",
     "\n",
@@ -31,16 +37,8 @@
     "```ORDER BY avg_age DESC```\\\n",
     "```;```\n",
     "\n",
-    "<img src=\"static/ALIAS_01.png\" style=\"width: 70%; margin: auto;\">\n"
+    "<img src=\"static/ALIAS_01.png\" style=\"width: 40%; margin: auto;\">\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "902f07f6-4f55-4c23-976c-13dc3db49b29",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
