updated sql notes

--- a/notebooks/02_Data_Analysis/MySQL/Intermediate SQL/5. JOINS.ipynb
+++ b/notebooks/02_Data_Analysis/MySQL/Intermediate SQL/5. JOINS.ipynb
@@ -120,6 +120,29 @@
     "\n",
     "<hr>\n",
     "\n",
+    "### FULL JOIN\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "In MySQL, there is no built-in FULL OUTER JOIN (unlike SQL Server, PostgreSQL, or Oracle).\n",
+    "But you can **simulate** it using a combination of LEFT JOIN, RIGHT JOIN, and UNION.\n",
+    "\n",
+    "```SELECT dem.first_name, dem.last_name, sal.occupation, dem.age```\\\n",
+    "```FROM employee_demographics AS dem```\\\n",
+    "```LEFT JOIN employee_salary AS sal```\\\n",
+    "```    ON dem.employee_id = sal.employee_id```\n",
+    "\n",
+    "```UNION```\n",
+    "\n",
+    "```SELECT dem.first_name, dem.last_name, sal.occupation, dem.age```\\\n",
+    "```FROM employee_demographics AS dem```\\\n",
+    "```RIGHT JOIN employee_salary AS sal```\\\n",
+    "```    ON dem.employee_id = sal.employee_id```\n",
+    "\n",
+    "<img src=\"static/FULL_JOIN_01.png\" style=\"width: 50%; margin: auto;\">\n",
+    "\n",
+    "<hr>\n",
+    "\n",
     "### MULTIPLE TABLE JOINS\n",
     "\n",
     "<hr>\n",
