updated mysql notes

--- a/notebooks/02_Data_Analysis/MySQL/2 Intermediate SQL. /006. UNIONS.ipynb
+++ b/notebooks/02_Data_Analysis/MySQL/2 Intermediate SQL. /006. UNIONS.ipynb
@@ -5,6 +5,12 @@
    "id": "ba50a805-cc3b-4d0d-89eb-c4221af310a4",
    "metadata": {},
    "source": [
+    "<style>\n",
+    "@media (max-width: 600px) {\n",
+    "    img[style] { width: 90% !important; }\n",
+    "}\n",
+    "</style>\n",
+    "\n",
     "# UNIONS \n",
     "\n",
     "<hr>\n",
