--- a/notebooks/02_Data_Analysis/MySQL/2 Intermediate SQL. /008. CASE.ipynb
+++ b/notebooks/02_Data_Analysis/MySQL/2 Intermediate SQL. /008. CASE.ipynb
@@ -5,6 +5,12 @@
    "id": "671a111e-d13b-4d5a-84a3-85f32c15de59",
    "metadata": {},
    "source": [
+    "<style>\n",
+    "@media (max-width: 600px) {\n",
+    "    img[style] { width: 90% !important; }\n",
+    "}\n",
+    "</style>\n",
+    "\n",
     "# CASE Statement\n",
     "\n",
     "---\n",
@@ -74,6 +80,14 @@
     "\n",
     "<img src=\"static/CASE_03.png\" style=\"display: flex; width: 50%; margin:auto;\">"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d67b374-e837-464c-99a7-efcb181d298d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
