--- a/notebooks/02_Data_Analysis/MySQL/2 Intermediate SQL. /009. SUBQUERIES.ipynb
+++ b/notebooks/02_Data_Analysis/MySQL/2 Intermediate SQL. /009. SUBQUERIES.ipynb
@@ -5,6 +5,12 @@
    "id": "2162d14f-04c7-4a33-b257-81e789e0e15e",
    "metadata": {},
    "source": [
+    "<style>\n",
+    "@media (max-width: 600px) {\n",
+    "    img[style] { width: 90% !important; }\n",
+    "}\n",
+    "</style>\n",
+    "\n",
     "# SUBQUERIES \n",
     "\n",
     "<hr>\n",
@@ -77,6 +83,14 @@
     "WHERE salary < (SELECT AVG(salary) FROM employee_salary);\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c0169c9-6626-470c-a6bb-bae85d6750cb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
