added mysql notes

--- a/notebooks/02_Data_Analysis/Data Analysis Roadmap.ipynb
+++ b/notebooks/02_Data_Analysis/Data Analysis Roadmap.ipynb
@@ -5,8 +5,16 @@
    "id": "fa43c21d-f31a-46ca-b670-0a0c3168e05b",
    "metadata": {},
    "source": [
-    "<img src=\"data_analyst_roadmap.JPG\" alt=\"data_analysis_roadmap\">"
+    "<img src=\"data_analyst_roadmap.JPG\" alt=\"data_analysis_roadmap\" style=\"display: flex; width: 95%; margin:auto;\">"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "374c0b49-21e3-40aa-9974-38e25028e0b8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
