--- a/notebooks/02_Data_Analysis/MySQL/00. Database and Tables.ipynb
+++ b/notebooks/02_Data_Analysis/MySQL/00. Database and Tables.ipynb
@@ -9,7 +9,11 @@
     "\n",
     "<hr>\n",
     "\n",
-    "### The following notebooks are structured around <a href=\"https://www.youtube.com/watch?v=rGx1QNdYzvs&list=PLUaB-1hjhk8FE_XZ87vPPSfHqb6OcM0cF\" target=\"_blank\">Alex the Analyst's Data Analyst Bootcamp </a> \n",
+    "### The following notebooks: \n",
+    "1. Beginner SQl,\n",
+    "2. Intermediate SQL\n",
+    "3. Advanced SQL \n",
+    "### are structured around <a href=\"https://www.youtube.com/watch?v=rGx1QNdYzvs&list=PLUaB-1hjhk8FE_XZ87vPPSfHqb6OcM0cF\" target=\"_blank\">Alex the Analyst's Data Analyst Bootcamp </a> \n",
     "\n",
     "<hr>\n",
     "\n",
