--- a/notebooks/02_Data_Analysis/MySQL/SQL roadmap.ipynb
+++ b/notebooks/02_Data_Analysis/MySQL/SQL roadmap.ipynb
@@ -5,8 +5,16 @@
    "id": "fc33d6cd-731e-41c6-832e-51d890c7d2e0",
    "metadata": {},
    "source": [
-    "<img src=\"sql_roadmap.JPG\" alt=\"data_analysis_roadmap\">"
+    "<img src=\"sql_roadmap.JPG\" alt=\"data_analysis_roadmap\" style=\"display: flex; width: 95%; margin:auto;\">"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04124c18-6254-41d2-9be5-9acd74354243",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
