added mysql notes

--- a/notebooks/02_Data_Analysis/Introduction to Data Analytics/Case Studies.ipynb
+++ b/notebooks/02_Data_Analysis/Introduction to Data Analytics/Case Studies.ipynb
@@ -16,9 +16,7 @@
     "\n",
     "#### Tasks / Exercises:\n",
     "1. Generate 5 business questions related to competitor performance in the region (e.g., pricing, promotions, market share).\n",
-    "<textarea style=\"color: green; min-width: 60%; max-width: 60%;  min-height: 10rem; margin: auto; display: block;\">Question 1\n",
-    "Question 2\n",
-    "Question 3\n",
+    "<textarea style=\"color: green; min-width: 60%; max-width: 60%;  min-height: 10rem; margin: auto; display: block;\">\n",
     "</textarea>\n",
     "\n",
     "1. Create 3 possible data sources that could help investigate why sales are not translating into higher profits.\n",
@@ -57,14 +55,6 @@
     "5.\tPropose a basic A/B test design the company could run to validate if shipping costs affect abandonment.\n",
     "<textarea style=\"color: green; min-width: 60%; max-width: 60%;  min-height: 10rem; margin: auto; display: block;\"></textarea>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f2489eb-b0e8-4c60-a665-c9bcb0377805",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
