fixed page slide navigation in study notes

--- a/notebooks/Terminal/GitHub and Git in the Terminal.ipynb
+++ b/notebooks/Terminal/GitHub and Git in the Terminal.ipynb
@@ -2,18 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2b72317b-d508-4d19-b511-2ee6311b097f",
-   "metadata": {},
-   "source": [
-    "# <a href='https://brolo231.github.io/Learning-Notebooks/'>Home Page</a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "2cf0ada9-1d3d-420f-99cb-8a3d9db66775",
    "metadata": {},
    "source": [
     "# GitHub & Git\n",
+    "\n",
+    "<hr>\n",
     "\n",
     "Git is a local version control system that tracks changes in files on your computer.\n",
     "#### If you havent already installed Git, install it:\n",
@@ -23,7 +17,9 @@
     "\n",
     "#### Configure Git with your details to ensure commits are linked to GitHub\n",
     "` git config --global user.name \"Your Name\" ` \\\n",
-    "` git config --global user.email \"your_email@example.com\" `"
+    "` git config --global user.email \"your_email@example.com\" `\n",
+    "\n",
+    "$$new_page$$"
    ]
   },
   {
@@ -40,7 +36,9 @@
     "Windows: Download from GitHub CLI website\n",
     "\n",
     "#### Authenticate GitHub CLI:\n",
-    "` gh auth login `\n"
+    "` gh auth login `\n",
+    "\n",
+    "$$new_page$$"
    ]
   },
   {
@@ -48,7 +46,7 @@
    "id": "e351bc58-0ccc-459a-9d1c-3a871ed69018",
    "metadata": {},
    "source": [
-    "## 1. List your repositories\n",
+    "### 1. List your repositories\n",
     "\n",
     "` gh repo list `"
    ]
@@ -58,7 +56,7 @@
    "id": "576bec11-1a0b-4198-8491-4f1566c21fcb",
    "metadata": {},
    "source": [
-    "## 2. Check to see if you're inside a git repo\n",
+    "### 2. Check to see if you're inside a git repo\n",
     "` git status `"
    ]
   },
@@ -67,12 +65,14 @@
    "id": "3987bb2b-dd55-4b81-b2a3-77c9b5f7ef81",
    "metadata": {},
    "source": [
-    "## 3. Navigate to repo by cd into\n",
+    "### 3. Navigate to repo by cd into\n",
     "` cd /path/to/repository `\n",
     "\n",
     "#### Then we can use tree -a to list the full directory structure\n",
     "\n",
-    "` tree -a `"
+    "` tree -a `\n",
+    "\n",
+    "$$new_page$$"
    ]
   },
   {
@@ -100,7 +100,9 @@
     "\n",
     "4. Verify remote URL \\\n",
     "        ` git remote -v ` \\\n",
-    "        # This tells us what repository our local git is linked to"
+    "        # This tells us what repository our local git is linked to\n",
+    "\n",
+    "$$new_page$$"
    ]
   },
   {
@@ -116,28 +118,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3906365-93f3-4a0d-be22-65d8506d649a",
-   "metadata": {},
-   "source": [
-    "<hr>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "faa232c5-603a-46d4-b1fd-cda5d57bf9e0",
    "metadata": {},
    "source": [
-    "# 6. Force push local to github \n",
+    "## 6. Force push local to github \n",
     "\n",
     "`git push -f originb main` \n",
     "\n",
-    "# 7. Merge remote and local \n",
+    "## 7. Merge remote and local \n",
     "\n",
     "*This command fetches changes from the remote repository and merges them into your local branch.*\n",
     "\n",
     "`git pull origin main`\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d969a260-52f5-48ed-82d7-8eccb7687048",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
