--- a/notebooks/Terminal/Terminal.ipynb
+++ b/notebooks/Terminal/Terminal.ipynb
@@ -2,14 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "57d1573b-e0ea-4702-8ad9-98fc89873937",
-   "metadata": {},
-   "source": [
-    "# <a href=\"https://brolo231.github.io/Learning-Notebooks/\">Home Page</a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "80aae7d1-c51e-4320-913e-601b9108b389",
    "metadata": {},
    "source": [
@@ -27,7 +19,9 @@
     "- [3. Searching & Finding Files](#searching-files)  \n",
     "- [4. System Information](#system-info)  \n",
     "- [5. Networking Commands](#networking)  \n",
-    "- [6. Archiving & Compression](#archiving)"
+    "- [6. Archiving & Compression](#archiving)\n",
+    "\n",
+    "$$new_page$$"
    ]
   },
   {
@@ -57,17 +51,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "id": "44532c5e-4059-4af4-ba91-e135d377ad39",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/brandonfourie/Desktop/Pong'"
+       "'/Users/brandonfourie/Desktop/Github-Repositories/Learning-Notebooks/Notebooks/Terminal'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,6 +76,8 @@
    "id": "bf33d012-629e-4c93-a1f8-fa31d8e56947",
    "metadata": {},
    "source": [
+    "$$new_page$$\n",
+    "\n",
     "## 2. Viewing & Editing Files <a id=\"viewing-editing\"></a>\n",
     "| Command | Description | Linux/macOS | Windows |\n",
     "|---------|------------|------------|---------|\n",
