added stuidy notes

--- a/notebooks/Python/01_The_Basics/02_Working_with_Numbers_and_Strings.ipynb
+++ b/notebooks/Python/01_The_Basics/02_Working_with_Numbers_and_Strings.ipynb
@@ -303,6 +303,36 @@
     "- ML models feel less magical\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ef2fef2a-c481-4d47-8358-bc4a994d5b09",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'punctuation'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhello\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mpunctuation)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'punctuation'"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hello\".punctuation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4abf0775-ff6e-4bc6-82d4-b7eff97fa238",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
