updated study notes

--- a/notebooks/Python Crash Course/Chapter 02 - Troubleshooting Python Errors.ipynb
+++ b/notebooks/Python Crash Course/Chapter 02 - Troubleshooting Python Errors.ipynb
@@ -9,7 +9,19 @@
     "\n",
     "Python errors are messages raised by the **Python interpreter** when it cannot understand or safely run your code. Learning to read and interpret these errors is a **core programming skill**.\n",
     "\n",
-    "---\n",
+    "## Table of Contents \n",
+    "\n",
+    "- Pg 2: Reading python errors\n",
+    "- Pg 3: SyntaxError\n",
+    "- Pg 4: NameError\n",
+    "- Pg 5: TypeError\n",
+    "- Pg 6: ValueError\n",
+    "- Pg 7: IndexError\n",
+    "- Pg 8: KeyError\n",
+    "- Pg 9: Attribute Error\n",
+    "- Pg 10: Debugging Mindset\n",
+    "\n",
+    "$$new_page$$\n",
     "\n",
     "### 🔍 How to Read a Python Error (Top → Bottom)\n",
     "\n",
@@ -27,9 +39,7 @@
     "2. **Line number** → where the error occurred  \n",
     "3. **Your code line** → what Python failed on  \n",
     "\n",
-    "> 👉 The **last line is the most important**.\n",
-    "\n",
-    "---\n",
+    "$$new_page$$\n",
     "\n",
     "### ❌ SyntaxError — code cannot run\n",
     "\n",
@@ -47,7 +57,7 @@
     "\n",
     "> 🧠 Fix syntax errors before anything else.\n",
     "\n",
-    "---\n",
+    "$$new_page$$\n",
     "\n",
     "### ❌ NameError — variable not defined\n",
     "\n",
@@ -63,7 +73,7 @@
     "- Misspelled variable name\n",
     "- Variable defined in another scope\n",
     "\n",
-    "---\n",
+    "$$new_page$$\n",
     "\n",
     "### ❌ TypeError — invalid operation for a type\n",
     "\n",
@@ -76,7 +86,7 @@
     "\n",
     "> 🧠 Read as: *“This operation doesn’t make sense for these values.”*\n",
     "\n",
-    "---\n",
+    "$$new_page$$\n",
     "\n",
     "### ❌ ValueError — correct type, invalid value\n",
     "\n",
@@ -87,7 +97,7 @@
     "**Meaning:**  \n",
     "The type is correct, but the value cannot be converted or used.\n",
     "\n",
-    "---\n",
+    "$$new_page$$\n",
     "\n",
     "### ❌ IndexError — index out of range\n",
     "\n",
@@ -99,7 +109,7 @@
     "**Meaning:**  \n",
     "You tried to access an index that does not exist.\n",
     "\n",
-    "---\n",
+    "$$new_page$$\n",
     "\n",
     "### ❌ KeyError — dictionary key missing\n",
     "\n",
@@ -111,7 +121,7 @@
     "**Meaning:**  \n",
     "The specified key does not exist in the dictionary.\n",
     "\n",
-    "---\n",
+    "$$new_page$$\n",
     "\n",
     "### ❌ AttributeError — attribute or method missing\n",
     "\n",
@@ -123,7 +133,7 @@
     "**Meaning:**  \n",
     "The object does not support that attribute or method.\n",
     "\n",
-    "---\n",
+    "$$new_page$$\n",
     "\n",
     "## 🧠 Debugging Mindset\n",
     "\n",
@@ -138,21 +148,11 @@
     "   - Is the type correct?\n",
     "   - Is the value valid?\n",
     "\n",
-    "---\n",
-    "\n",
     "## ✅ Key Rule to Remember\n",
     "\n",
-    "> **Errors are feedback, not failure.**  \n",
-    "> The interpreter is telling you exactly what it cannot understand.\n"
+    "**Errors are feedback, not failure.** \\\n",
+    "The interpreter is telling you exactly what it cannot understand.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e952baf-78b3-41a7-adbc-6104c0d7ca41",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
