added text files for python practice

--- a/notebooks/Python /Crash Course/Chapter 10 - Files and Exceptions.ipynb
+++ b/notebooks/Python /Crash Course/Chapter 10 - Files and Exceptions.ipynb
@@ -1,12 +1,47 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1cd3184-80e6-4890-bdab-d41b4b533767",
+   "cell_type": "markdown",
+   "id": "eeeaa673-d93a-48be-aa00-036ca3ef0ba4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# File and Exceptions\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "## Table of Contents \n",
+    "\n",
+    "- Pg 2: Reading from a File\n",
+    "- Pg 3: \n",
+    "- Pg 4: \n",
+    "- Pg 5: \n",
+    "- Pg 6: \n",
+    "- Pg 7: \n",
+    "- Pg 8: \n",
+    "- Pg 9: \n",
+    "\n",
+    "$$new_page$$\n",
+    "\n",
+    "## Reading from a file \n",
+    "\n",
+    "The following is a simple example of reading and printing the contents of a file: \n",
+    "\n",
+    "```\n",
+    "from pathlib import Path\n",
+    "\n",
+    "path = Path('pi_digits.txt')\n",
+    "contents = path.read_text()\n",
+    "print(contents)\n",
+    "```\n",
+    "\n",
+    "```read_text``` returns the contents of the file in the form of a single string \n",
+    "\n",
+    "In the example above the file pi_digits.txt would need to be in the same directory that this python script is saved in, in order for it to be successfully read, otherwise, the exact path to that files directory would need to be provided. \n",
+    "\n",
+    "### Accessing a file's lines\n",
+    "\n",
+    "You can use the splitlines() method to turn a long string into a set of lines, and then use a for loop to examine each line from a file, one at a time:"
+   ]
   }
  ],
  "metadata": {
