updated lms styling

--- a/notebooks/Python /Crash Course/Chapter 10 - Files and Exceptions.ipynb
+++ b/notebooks/Python /Crash Course/Chapter 10 - Files and Exceptions.ipynb
@@ -40,7 +40,18 @@
     "\n",
     "### Accessing a file's lines\n",
     "\n",
-    "You can use the splitlines() method to turn a long string into a set of lines, and then use a for loop to examine each line from a file, one at a time:"
+    "You can use the splitlines() method to turn a long string into a set of lines, and then use a for loop to examine each line from a file, one at a time:\n",
+    "\n",
+    "```\n",
+    "from pathlib import Path\n",
+    "\n",
+    "path = Path('pi_digits.txt')\n",
+    "contents = path.read_text()\n",
+    "\n",
+    "lines = contents.splitlines()\n",
+    "for line in lines:\n",
+    "    print(line)\n",
+    "```"
    ]
   }
  ],
